--- a/src/app/components/character-list/character-list.component.scss
+++ b/src/app/components/character-list/character-list.component.scss
@@ -2,10 +2,9 @@
   &__item {
     display: flex;
     justify-content: center;
-    padding: 5px;
+    padding: 5px 0;
     font-size: 24px;
     font-weight: bold;
-    font-family: 'Courier New';
     background-color: #50b4d8;
     cursor: pointer;
 
