--- a/src/app/components/character/character.component.html
+++ b/src/app/components/character/character.component.html
@@ -1,3 +1,19 @@
-<p>
-  character works!
-</p>
+<div class="app-character">
+  <span class="app-character__title">Character Info:</span>
+  <div class="app-character__details-wrapper">
+    <div class="app-character__item app-character__name">Han Solo</div>
+    <div class="app-character__item app-character__species">Human</div>
+  </div>
+  <div class="app-character__details-wrapper">
+    <div class="app-character__list-wrapper">
+      <div class="app-character__item app-character__movie">Episode IV</div>
+      <div class="app-character__item app-character__movie"
+           [class.app-character__movie_even]="true">Episode IV</div>
+    </div>
+    <div class="app-character__list-wrapper">
+      <div class="app-character__item app-character__spaceship">Millenium Falcon</div>
+      <div class="app-character__item app-character__spaceship"
+           [class.app-character__spaceship_even]="true">Millenium Falcon</div>
+    </div>
+  </div>
+</div>
