--- a/src/app/components/character/character.component.html
+++ b/src/app/components/character/character.component.html
@@ -2,7 +2,7 @@
   <span class="app-character__title">Character Info:</span>
   <div class="app-character__details-wrapper">
     <div class="app-character__item app-character__name">Han Solo</div>
-    <div class="app-character__item app-character__species">Human</div>
+    <div class="app-character__item app-character__species">/<span>Human/</span></div>
   </div>
   <div class="app-character__details-wrapper">
     <div class="app-character__list-wrapper">
