--- a/src/app/components/character/character.component.html
+++ b/src/app/components/character/character.component.html
@@ -1,19 +1,19 @@
 <div class="app-character">
-  <span class="app-character__title">Character Info:</span>
+  <span class="app-character__title">{{character.name}}:</span>
   <div class="app-character__details-wrapper">
-    <div class="app-character__item app-character__name">Han Solo</div>
-    <div class="app-character__item app-character__species">/<span>Human/</span></div>
+    <div class="app-character__item app-character__birth_year">{{character.birth_year}}</div>
+    <div class="app-character__item app-character__species">/<span *ngFor="let specie of character.species">{{specie}}/</span></div>
   </div>
   <div class="app-character__details-wrapper">
     <div class="app-character__list-wrapper">
-      <div class="app-character__item app-character__movie">Episode IV</div>
-      <div class="app-character__item app-character__movie"
-           [class.app-character__movie_even]="true">Episode IV</div>
+      <div *ngFor="let film of character.films; let i = index;"
+           class="app-character__item app-character__movie"
+           [class.app-character__movie_even]="i % 2 == 0">{{film}}</div>
     </div>
     <div class="app-character__list-wrapper">
-      <div class="app-character__item app-character__spaceship">Millenium Falcon</div>
-      <div class="app-character__item app-character__spaceship"
-           [class.app-character__spaceship_even]="true">Millenium Falcon</div>
+      <div *ngFor="let starships of character.starships; let i = index;"
+           class="app-character__item app-character__spaceship"
+           [class.app-character__spaceship_even]="i % 2 == 0">{{starships}}</div>
     </div>
   </div>
 </div>
