--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,6 @@
 <div class="app-header">
-  <img class="app-header__logo" src="/assets/img/star-wars-logo.svg" routerLink="/">
+  <div routerLink="/" class="app-header__link">
+    <img class="app-header__logo" src="/assets/img/star-wars-logo.svg">
+    <div class="app-header__title" >Characters</div>
+  </div>
 </div>
