--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,7 @@
+@import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
+
 body {
-  background-color: #000;
+  background: #000 url("/assets/img/bg.jpg");
 }
 
 * {
