--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <app-header></app-header>
-<router-outlet></router-outlet>
+<router-outlet *ngIf="characterService.isCharactersLoaded"></router-outlet>
