--- a/src/app/components/character-list/character-list.component.scss
+++ b/src/app/components/character-list/character-list.component.scss
@@ -1,4 +1,7 @@
 .app-character-list {
+  max-width: 500px;
+  margin: 0 auto;
+
   &__item {
     display: flex;
     justify-content: center;
@@ -7,9 +10,14 @@
     font-weight: bold;
     background-color: #50b4d8;
     cursor: pointer;
+    transition: transform .3s;
 
     &_even {
       background-color: #eb3d54;
+    }
+
+    &:hover {
+      transform: scale(0.98);
     }
   }
 }
