filter and character data respresentation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-header></app-header>
-<router-outlet *ngIf="characterService.isCharactersLoaded"></router-outlet>
+<div *ngIf="!characterService.isAllDataLoaded" class="app-main-loader"></div>
+<router-outlet *ngIf="characterService.isAllDataLoaded"></router-outlet>
